--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   <body class="page {{page.bodyClass}}">
     {% include mobile-menu.html %}
     <div class="container mx-auto px-6 md:px-4">
-      
+      {% include header.html %}
       {{content}}
       {% include footer.html %}
     </div>
